# solana-study

./: .gitignore  README.md
escrow/: .gitignore  Cargo.toml  README.md  notes.md
escrow/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
indexer/: Cargo.toml  README.md  block_response.json  decode.sh  docker-compose.yml  notes.md
indexer/migrations/2021-06-02-081318_indexer/: down.sql  up.sql
indexer/migrations/2021-06-07-074023_indexer/: down.sql  up.sql
indexer/src/: decode_solana.rs  lib.rs  main.rs  models.rs  schema.rs
