[package]
name = "indexer"
version = "0.1.0"
authors = ["huy <anhhuy0501@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
http = "0.2"
url = "2.2"
bytes = "1.0"
serde_urlencoded = "0.7"
curl = "0.4.37"
postgres = "0.19.1"
tokio-postgres = "0.7.2"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
regex = "1.5.4"